--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,32 +14,39 @@ jobs:
       contents: write
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout the branch with the latest code
+        uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          ref: ${{ github.ref_name }}
+          path: 'code'
+      - name: Checkout the branch with the docs
+        uses: actions/checkout@v4
+        with:
+          ref: 'adam/only_docs'
+          path: 'docs'
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
-      - name: Copy docs to docs/dokka directory
+      - name: Copy docs to the code directory
         run: |
-          git fetch origin docs:docs
-          git checkout docs
-          mkdir -p docs/dokka || true
-          cp -R current/ docs/dokka/current
-          cp -R history/ docs/dokka/history
-          git checkout ${{ github.ref_name }}
+          mkdir -p ./code/docs/dokka
+          cp -R ./docs/current ./code/docs/dokka
+          cp -R ./docs/history ./code/docs/dokka
       - name: Generate Dokka Documentation
+        working-directory: ./code
         run: ./gradlew dokkaHtmlMultiModule
-      - name: Update Docs Branch
+      - name: Update Docs
         run: |
-          git checkout docs
-          cp -R docs/dokka/history .
-          cp -R docs/dokka/current .
+          cp -R code/docs/dokka/history docs/
+          cp -R code/docs/dokka/current docs/
+      - name: Push updated docs
+        working-directory: ./docs
+        run: |
           git add history
           git add current
           git config user.name github-actions
           git config user.email github-actions@github.com
           git commit -m "Update API documentation for ${{ github.ref_name }}"
-          git push origin docs
+          git push origin adam/only_docs
